front/src/styles/pages/post.css
.post-header {
  display: block;
  position: relative;
  height: 400px;
  width: 100%;
  .hero {
    @apply rounded
            shadow-md;
    background-repeat: no-repeat;
    background-position: center bottom;
    background-size: cover;
    max-height: 100%;
    height: 400px;
    width: 100%;
    overflow: clip;
    position: relative;
    z-index: 4;
    &.image-bottom img {
      bottom: 0;
    }
  }
  h1 {
    left: 0;
    position: relative;
    text-shadow: 0 0 3.3rem rgba(var(--background-saturated), 0.77);
    top: -1.5rem;
    z-index: 5;
  }
}
.post-main {
  @apply shadow-lg;
  margin-top: 5rem;
  position: relative;
  width: 89%;
  top: -8rem;
  padding: 9rem 2rem 2rem;
  z-index: -1;
  display: flex;
  flex-direction: row;
  background-color: rgb(var(--background-saturated));
}
.post-article {
  width: 73%;
  padding-right: .5rem;
}
.post-aside {
  width: 25%;
  padding-left: .5rem;
  text-align: right;
  h2 {
    font-size: 1.77rem;
  }
  li {
    list-style-type: none;
  }
}

